[gd_scene load_steps=4 format=3 uid="uid://bvhcrmj84uk0u"]

[ext_resource type="Texture2D" uid="uid://bdnmo2tc2flt7" path="res://Designs/ghost.jpeg" id="1_2cmrp"]
[ext_resource type="Script" path="res://UI/actualPassword.gd" id="1_x2bso"]
[ext_resource type="Texture2D" uid="uid://p0tnr0vnwkqb" path="res://TileSets/futuristic puzzle folder/KEYPAD.png" id="2_fjyp7"]

[node name="ActualPassword" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2bso")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 179.0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Ghost" type="Sprite2D" parent="TextureRect"]
position = Vector2(159.5, 90)
scale = Vector2(0.438859, 0.434783)
texture = ExtResource("1_2cmrp")

[node name="Sprite2D" type="Sprite2D" parent="TextureRect"]
position = Vector2(170, 90)
scale = Vector2(3, 3)
texture = ExtResource("2_fjyp7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 0
offset_left = 127.0
offset_top = 58.0
offset_right = 150.0
offset_bottom = 159.0
scale = Vector2(0.88, 0.637755)
alignment = 1

[node name="1Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "1"

[node name="4Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "4"

[node name="7Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "7"

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 0
offset_left = 189.0
offset_top = 58.0
offset_right = 212.0
offset_bottom = 159.0
scale = Vector2(0.88, 0.637755)
alignment = 1

[node name="3Button" type="Button" parent="VBoxContainer4"]
layout_mode = 2
text = "3"

[node name="6Button" type="Button" parent="VBoxContainer4"]
layout_mode = 2
text = "6"

[node name="9Button" type="Button" parent="VBoxContainer4"]
layout_mode = 2
text = "9"

[node name="VBoxContainer5" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 5)
layout_mode = 0
offset_left = 159.0
offset_top = 57.0
offset_right = 182.0
offset_bottom = 158.0
scale = Vector2(0.88, 0.683309)
alignment = 1

[node name="2Button" type="Button" parent="VBoxContainer5"]
layout_mode = 2
text = "2"

[node name="5Button" type="Button" parent="VBoxContainer5"]
layout_mode = 2
text = "5"

[node name="8Button" type="Button" parent="VBoxContainer5"]
layout_mode = 2
text = "8"

[node name="0Button" type="Button" parent="VBoxContainer5"]
layout_mode = 2
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 24.0
offset_right = 169.0
offset_bottom = 64.0
scale = Vector2(2.07322, 0.437796)

[node name="BlueButton" type="Button" parent="HBoxContainer"]
layout_mode = 2

[node name="GreenButton" type="Button" parent="HBoxContainer"]
layout_mode = 2

[node name="RedButton" type="Button" parent="HBoxContainer"]
layout_mode = 2

[node name="YellowButton" type="Button" parent="HBoxContainer"]
layout_mode = 2

[node name="CheckButton" type="Button" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 89.0
offset_right = 75.0
offset_bottom = 120.0
scale = Vector2(1.31344, 1.07252)
text = "Check"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BlueLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Blue: 0"

[node name="GreenLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_top = 18.0
offset_right = 48.0
offset_bottom = 41.0
text = "Green: 0"

[node name="RedLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 1.0
offset_top = 34.0
offset_right = 41.0
offset_bottom = 57.0
text = "Red: 0"

[node name="YellowLabel" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 54.0
offset_right = 53.0
offset_bottom = 77.0
text = "Yellow: 0"

[node name="pressEnter" type="Label" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 18.0
offset_top = 127.0
offset_right = 58.0
offset_bottom = 150.0

[connection signal="pressed" from="VBoxContainer/1Button" to="." method="_on_1_button_pressed"]
[connection signal="pressed" from="VBoxContainer/4Button" to="." method="_on_4_button_pressed"]
[connection signal="pressed" from="VBoxContainer/7Button" to="." method="_on_7_button_pressed"]
[connection signal="pressed" from="VBoxContainer4/3Button" to="." method="_on_3_button_pressed"]
[connection signal="pressed" from="VBoxContainer4/6Button" to="." method="_on_6_button_pressed"]
[connection signal="pressed" from="VBoxContainer4/9Button" to="." method="_on_9_button_pressed"]
[connection signal="pressed" from="VBoxContainer5/2Button" to="." method="_on_2_button_pressed"]
[connection signal="pressed" from="VBoxContainer5/5Button" to="." method="_on_5_button_pressed"]
[connection signal="pressed" from="VBoxContainer5/8Button" to="." method="_on_8_button_pressed"]
[connection signal="pressed" from="VBoxContainer5/0Button" to="." method="_on_0_button_pressed"]
[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
